opsiconfd (4.1.1.6-1) UNRELEASED; urgency=medium

  * Removed unnecessary shebangs.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Wed, 21 Jun 2017 16:10:40 +0200

opsiconfd (4.1.1.5-13) testing; urgency=medium

  * Removed obsolete logrotate configuration fix.
  * Debian-based distros: drop build requirement python-support.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Fri, 19 May 2017 11:53:50 +0200

opsiconfd (4.1.1.5-12) testing; urgency=medium

  * RPM: fix call to possibly undefined name.
  * RPM: drop a distribution-based switch.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 18 May 2017 16:11:53 +0200

opsiconfd (4.1.1.5-11) testing; urgency=medium

  * Debian-based distros: depend on systemd.
  * Debian-based distros: no more calls to update-rc.d.
  * opsiconfd.service: execute mkdir with -p.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 18 May 2017 14:27:28 +0200

opsiconfd (4.1.1.5-10) testing; urgency=medium

  * RPM: No pre-macro for systemd under CentOS / RHEL.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 18 May 2017 13:24:38 +0200

opsiconfd (4.1.1.5-9) testing; urgency=medium

  * RPM: Add switch to systemd macros because not every RPM distribution
    is the same.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 18 May 2017 12:17:27 +0200

opsiconfd (4.1.1.5-8) testing; urgency=medium

  * RPM: Fix call to macro in %pre.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 18 May 2017 09:55:46 +0200

opsiconfd (4.1.1.5-7) testing; urgency=medium

  * RPM: listing opsiconfd.service as normal file.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 18 May 2017 09:40:50 +0200

opsiconfd (4.1.1.5-6) testing; urgency=medium

  * RPM: do not mark opsiconfd.service as a config.
  * RPM: added %pre section for better service integration.
  * opsiconfd.info: Dropped shebang line.
  * Added dependency to logrotate.

 -- Niko Wenselowski <n.wenselowski@uib.de>  Thu, 18 May 2017 09:30:33 +0200

opsiconfd (4.1.1.5-5) testing; urgency=medium
